<?xml version="1.0"?>
<package>
  <name>gvac_udev</name>
  <version>0.0.1</version>
  <description>udev rule creator for gvacrobot</description>

  <maintainer email="gvac@todo.todo">gvac</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
